# GeoPixel

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql.yml
src/GeoPixel/: __init__.py  chat.py  data.txt  data_mix.py  ds_config_zero2.json  finetune.sh  inference.py  ixc_utils.py  merge_lora_weights_and_save_hf_model.py  requirements.txt  train.py  train.sh  utils.py
src/GeoPixel/data/: GeoPixelD.json
src/GeoPixel/data/GeoPixelD/train/: P0224_0_800_0_800.json
src/GeoPixel/docs/: dataset.md  finetune.md  inference.md  install.md
src/GeoPixel/model/: geopixel.py
src/GeoPixel/model/IXC/: configuration_internlm_xcomposer2.py  ixc_utils.py  modeling_internlm_xcomposer2.py
src/GeoPixel/model/sam2/: __init__.py  automatic_mask_generator.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
src/GeoPixel/model/sam2/modeling/: memory_attention.py  memory_encoder.py  position_encoding.py  sam2_base.py
src/GeoPixel/model/sam2/modeling/backbones/: hieradet.py
src/GeoPixel/model/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
src/GeoPixel/model/sam2/utils/: transforms.py
src/GeoPixel/model/sam2_configs/: sam2_hiera_b+.yaml  sam2_hiera_l.yaml  sam2_hiera_s.yaml  sam2_hiera_t.yaml
