# setup.cfg

[metadata]
# Can duplicate some info from pyproject.toml, but primarily for older tools.
# name, version etc. are usually taken from pyproject.toml if present.

[options]
package_dir =
    = src
packages = find:
# python_requires = ">=3.10" # Can also be specified here

[options.packages.find]
where = src